@@ -18,7 +18,7 @@ int read_features(parser* p, void* ex);
 hash_func_t getHasher(const std::string& s);
 
 // use the isnan macro from Boost which falls back to C99
-#include <boost/math/special_functions/fpclassify.hpp> // isnan     
-using boost::math::isnan;
+//#include <boost/math/special_functions/fpclassify.hpp> // isnan     
+//using boost::math::isnan;
 
 #endif
